Rework terminal launching, path caching, and state management